# Codekaryotes

./: Cargo.toml  main.py  pyproject.toml  requirements.txt  stats.py  temp.py  timing_test.py  update.bat  utils.py
gui/: export_video.py  window.py
gui/elements/: creatures.py  organisms.py
sim/: multiprocess.py  world.py
sim/Parameters/: body.py  brain.py  evolution.py  plant.py  settings.py  world.py
sim/creatures/: codekaryote.py  modules.py
sim/creatures/body/: eyes.py  modules.py
sim/creatures/genome/: body_generators.py  brain_generator.py
sim/creatures/mind/: brain.py  neuron.py
sim/creatures/mind/input_neurons/: basic.py  vision.py
sim/creatures/mind/output_neurons/: moveneuron.py
sim/life/: codekaryote.py  modules.py
sim/life/body/: eyes.py  lifecycle.py  modules.py  physics.py
sim/life/common/: aesthetic.py  ancestry.py  energy.py
sim/life/genome/: body_generators.py  brain_generator.py  plant_generator.py
sim/life/mind/: brain.py  neuron.py
sim/life/mind/input_neurons/: basic.py  vision.py
sim/life/mind/output_neurons/: moveneuron.py
sim/parameters/: brain.py
src/: brain.rs  codekaryotes.rs  graphics.rs  lib.rs  life.rs  main.rs  parameters.rs  render.rs  startup.rs  utils.rs  window.rs
src/life/: body.rs  brain.rs  codekaryotes.rs  collisions.rs  common_parts.rs  creature.rs  creature_parts.rs  creature_parts_old.rs  genome.rs  plant.rs  plant_parts.rs  systems.rs
src/life/brain/: inputs.rs  output.rs  systems.rs
