[package]
name = "Codekaryotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3




[dependencies]
rand = { version = "0.8.5"}
arr_macro = "0.1.3"
rapier2d = "0.14.0"
bevy = "0.8.1"