[package]
name = "codekaryotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier3d = { version = "0.21.0", features = [ "simd-stable", "debug-render-3d" ] }
bevy-inspector-egui = "0.18.3"
bevy_fly_camera = "0.10.0"

rand = { version = "0.8.5"}
rand_distr = "0.4.3"


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3